name alignment corrected, but ready to re-work header technique next

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
     font-size:24px;
     font-weight: 700;
     margin-left: 150px;
-    width: 20%;
+    width: 150px;
     padding:20px;
     text-align: center;
   }
@@ -46,7 +46,7 @@ body {
    and experiment from there. */
 ul {
   float: right;
-  margin-right: 200px;
+  margin-right: 250px;
   list-style-type: none;
 
  }
@@ -68,7 +68,8 @@ a {
   overflow: auto;
   background-color: lightskyblue;
   border-top: 2px solid #777777;
-  /* background-image: url(assets/images/paper_2.png); */
+  background-image: url(../images/paper_2.png);
+  /* background-image: url(../images/stardust.png) */
 }
 #contentBackColor {background-color: lightskyblue;}
 
@@ -84,7 +85,9 @@ article {
   background-color: #ffffff;
   /* margin: auto;  */
   margin: 50px 50px 50px 150px; 
-  border: 2px solid #dddddd;
+  border: 3px solid #dddddd;
+  box-sizing: border-box;
+
 }
 
 p {
@@ -92,13 +95,15 @@ p {
 }
 #profileImg {
   float: left;
-  padding: 20px;
+  width: 140px;
+  height: 145px;
+  padding: 5px 20px 20px 5px;
 }
 
 footer {
   background-color: #666666;
   height: 40px;
-  border-top: 5px solid #4aaaa5;
+  border-top: 6px solid #4aaaa5;
   text-align: center;
   font-size: 9pt;
  /* this is not the right color */ 
